--- a/lerobot/configs/policy/actDiffusion_pusht.yaml
+++ b/lerobot/configs/policy/actDiffusion_pusht.yaml
@@ -1,32 +1,47 @@
 # @package _global_
 
-seed: 1000
-dataset_repo_id: lerobot/aloha_sim_insertion_human
+seed: 100000
+dataset_repo_id: lerobot/pusht
 
 override_dataset_stats:
-  observation.images.top:
-    # stats from imagenet, since we use a pretrained vision model
-    mean: [[[0.485]], [[0.456]], [[0.406]]]  # (c,1,1)
-    std: [[[0.229]], [[0.224]], [[0.225]]]  # (c,1,1)
+  # TODO(rcadene, alexander-soare): should we remove image stats as well? do we use a pretrained vision model?
+  observation.image:
+    mean: [[[0.5]], [[0.5]], [[0.5]]]  # (c,1,1)
+    std: [[[0.5]], [[0.5]], [[0.5]]]  # (c,1,1)
+  # TODO(rcadene, alexander-soare): we override state and action stats to use the same as the pretrained model
+  # from the original codebase, but we should remove these and train our own pretrained model
+  observation.state:
+    min: [13.456424, 32.938293]
+    max: [496.14618, 510.9579]
+  action:
+    min: [12.0, 25.0]
+    max: [511.0, 511.0]
 
 training:
-  offline_steps: 100000
+  offline_steps: 200000
   online_steps: 0
-  eval_freq: 200
-  save_freq: 200
+  eval_freq: 10000
+  save_freq: 10000
   save_checkpoint: true
 
-  batch_size: 8
-  lr: 1e-5
-  lr_backbone: 1e-5
+  batch_size: 64
+  lr: 2.83e-5
+  lr_backbone: 2.83e-5
   lr_scheduler: cosine
   lr_warmup_steps: 500
   weight_decay: 1e-4
   grad_clip_norm: 10
+  adam_betas: [0.95, 0.999]
+  adam_eps: 1.0e-8
+  adam_weight_decay: 1.0e-6
   online_steps_between_rollouts: 1
 
   delta_timestamps:
-    action: "[i / ${fps} for i in range(${policy.chunk_size})]"
+    observation.image: "[i / ${fps} for i in range(1 - ${policy.n_obs_steps}, 1)]"
+    observation.state: "[i / ${fps} for i in range(1 - ${policy.n_obs_steps}, 1)]"
+    action: "[i / ${fps} for i in range(1 - ${policy.n_obs_steps}, 1 - ${policy.n_obs_steps} + ${policy.chunk_size})]"
+
+  drop_n_last_frames: 8  # ${policy.horizon} - ${policy.n_action_steps} - ${policy.n_obs_steps} + 1
 
 eval:
   n_episodes: 50
@@ -38,27 +53,29 @@ policy:
 
   # Input / output structure.
   n_obs_steps: 1
-  chunk_size: 100 # chunk_size
-  n_action_steps: 50
+  chunk_size: 16 # chunk_size
+  n_action_steps: 8
 
   input_shapes:
     # TODO(rcadene, alexander-soare): add variables for height and width from the dataset/env?
-    observation.images.top: [3, 240, 320]
+    observation.image: [3, 96, 96]
     observation.state: ["${env.state_dim}"]
   output_shapes:
     action: ["${env.action_dim}"]
 
   # Normalization / Unnormalization
   input_normalization_modes:
-    observation.images.top: mean_std
+    observation.image: mean_std
     observation.state: mean_std
   output_normalization_modes:
-    action: mean_std
+    action: min_max
 
   # Architecture.
   # Vision backbone.
   vision_backbone: resnet18
   pretrained_backbone_weights: ResNet18_Weights.IMAGENET1K_V1
+  crop_shape: [84, 84]
+  crop_is_random: True
   replace_final_stride_with_dilation: false
   # Transformer layers.
   pre_norm: false
